--- a/mystyles.css
+++ b/mystyles.css
@@ -1,15 +1,9 @@
 #wrap {
 	width: 1200px; 
 	margin: auto;
-	
-    /*border-right: 2px solid #000000;
-    border-left: 2px solid #000000;*/
-	/*border-left: 2px solid gray;
-	border-right: 2px solid gray;
-	border-bottom: none;*/
-	border: 2px solid #000000;
+	border: 2px solid black;
 	border-radius: 0px 80px;
-	background: #DADADA;
+	background: #DADADA; /* gray shade */
 }
 
 html,body{
@@ -66,7 +60,7 @@ a.navlink:active{
 #navbar ul{
     height:36px;
     margin-left:auto;
-    color:#000000;
+    color:black;
 }
 #navbar ul{
     background: url(images/anim_2.png) no-repeat;
@@ -85,7 +79,7 @@ a.navlink:active{
 }
 #navbar1 ul li a{
 text-decoration:none;
-color:#000000;
+color:black;
 }
 
 .content{
