Edited all tables to match Now they are all green outlined and have bolded title rows/columns Plus I made a couple of small edits

--- a/mystyles.css
+++ b/mystyles.css
@@ -11,7 +11,12 @@ html,body{
 }
 
 h1,h2{
-	color:rgb(0,133,63);
+	color:rgb(0,133,63); /* S&T green */
+}
+
+table.green{
+	border:2 solid rgb(0,133,63); 
+	text-align:center;
 }
 
 ul, li {
